src/test/ui/type-alias-impl-trait/issue-85113.stderr
error: internal compiler error: Non-defining use of DefId(0:5 ~ issue_85113[86c2]::OpaqueOutputImpl::{opaque#0}) with revealed type
  --> $DIR/issue-85113.rs:13:1
   |
LL | / fn cool_fn<'a>(arg: &'a str) -> OpaqueOutputImpl<'a> {
LL | |
LL | |     let out: OpaqueOutputImpl<'a> = arg;
LL | |
LL | |     arg
LL | | }
   | |_^
   |
   = note: delayed at compiler/rustc_mir/src/borrow_check/type_check/mod.rs:1353:46

error: internal compiler error: member constraint for `DefId(0:5 ~ issue_85113[86c2]::OpaqueOutputImpl::{opaque#0})` has an option region `'_#7r` that is not a universal region
  --> $DIR/issue-85113.rs:15:37
   |
LL |     let out: OpaqueOutputImpl<'a> = arg;
   |                                     ^^^
   |
   = note: delayed at compiler/rustc_mir/src/borrow_check/region_infer/mod.rs:697:22

thread 'rustc' panicked at 'no errors encountered even though `delay_span_bug` issued', compiler/rustc_errors/src/lib.rs:1051:13
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

error: internal compiler error: unexpected panic

note: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md

note: rustc 1.55.0-dev running on x86_64-unknown-linux-gnu

note: compiler flags: -Z threads=1 -Z ui-testing -Z deduplicate-diagnostics=no -Z emit-future-incompat-report -C codegen-units=1 -C prefer-dynamic -C rpath -C debuginfo=0

query stack during panic:
end of query stack
